Adding better vision, animations, menu

--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<title>Подобри общата си култура</title>
+		<title>Обогати общата си култура</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="fonts.css">
+		<link rel="shortcut icon" href="Pictures/brain.ico" />
 	</head>
 	<body>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     	<script src="javascript.js"></script>
 
 		<div id = "welcome_window">
-			<h2>Култура на Деня</h2>
+			<h2>Култура на Деня </h2>
 			
 			<div id = "day_phrase">
 				<div id = "day_text">
@@ -22,12 +24,24 @@
 			</div>
 			<a href = "#">
 				<div id = "go_on">
-						Продължи към сайта ->
+						Продължи <!--към сайта-->
 				</div>
 			</a>
 		</div>
 
-		<h1>Аз съм Хакер</h1>
+		<div id = "top_menu">
+			<img src = "Pictures/generalknowledge1.jpg">
+
+			<div id = "menu_container">
+				<ul>
+					<li><a href="index.html">Начало</a></li>
+					<li>Интересни Факти</li>
+					<li>За Нас</li>
+				</ul>
+			</div>
+		</div>
+
+		<h1><br>Аз съм Хакер</h1>
 		<h1>Глфпгдлфгпдфгс :*</h1>
 
 
