Confusion and facts_container
I need to think a little bit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
 					<img src="Pictures/tower.jpg">
 				</div>
 			</div>
-			<a href = "#">
+			<a>
+
+				<div id = "#google" style = "width: 30%">
+					<form name="cse" id="searchbox_demo" action="https://www.google.com/cse">
+						<input type="hidden" name="cref" value="" />
+						<input type="hidden" name="ie" value="utf-8" />
+						<input type="hidden" name="hl" value="" />
+						<input name="q" type="text" size="40" />
+						<input type="submit" name="sa" value="Search" />
+					</form>
+					<script type="text/javascript" src="https%3A%2F%2Fcse.google.com%2Fcse/tools/onthefly?form=searchbox_demo&lang="></script>
+                                
+				</div>	
 				<div id = "go_on">
 						Продължи <!--към сайта-->
 				</div>
@@ -35,15 +47,19 @@
 			<div id = "menu_container">
 				<ul>
 					<li><a href="index.html">Начало</a></li>
-					<li>Интересни Факти</li>
+					<li id = "facts"><a href = "#">Интересни Факти</a></li>
 					<li>За Нас</li>
 				</ul>
 			</div>
 		</div>
 
-		<h1><br>Аз съм Хакер</h1>
-		<h1>Глфпгдлфгпдфгс :*</h1>
-
+		<div id = "left">
+		</div>
+		<div id = "container">
+			some text
+		</div>
+		<div id = "right">
+		</div>
 
 	</body>
 </html>
